--- a/src/App.css
+++ b/src/App.css
@@ -24,13 +24,15 @@
   pointer-events: none;
 }
 .card-main {
-  position: relative;
-  display: flex;
-  background-color: #fff;
-  background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 0.25rem;
-  max-width: 60vw;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    background-color: grey;
+    background-clip: border-box;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    border-radius: 0.25rem;
+    width: 60vw;
+    align-items: center;
 }
 li:nth-of-type(1n + 7) {
   display: none;
@@ -41,14 +43,16 @@ li {
   list-style-type: circle;
 }
 .box {
+    width: 368px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .img-main img {
-  display: flex;
+    width: 100%;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -91,4 +95,12 @@ li {
   align-items: center;
   justify-content: center;
   margin: 20px;
+}
+
+.gridCont {
+  /* max-width: 931px; */
+  margin: 0 auto;
+  display: grid;
+  gap: 50px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
