--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    background-color: grey;
+    background-color: #fff;
     background-clip: border-box;
     border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 0.25rem;
